# mp4svg

./: .dockerignore  .gitignore  1.webm  Dockerfile  Dockerfile.dev  Makefile  README.md  TODO.md  install.sh  mp4svg.py  mp4webm.py  player.html  pyproject.toml  requirements.txt  video.html  video2svg.py
.github/workflows/: ci.yml
js/: base91.js  player.js
src/mp4svg/: __init__.py  api_server.py  ascii85.py  base.py  cli.py  converters.py  grpc_client.py  grpc_server.py  hybrid.py  mcp_client.py  mcp_server.py  mp4svg.proto  polyglot.py  qrcode.py  shell.py  vector.py
src/mp4svg/converters/: __init__.py  ascii85_converter.py  base64_converter.py  hybrid_converter.py  polyglot_converter.py  qrcode_converter.py  vector_converter.py
src/mp4svg/validators/: __init__.py  integrity_validator.py  svg_validator.py
tests/: __init__.py  test_converters.py  test_validators.py
webm/: README.md  mp2webm.py  video2svg.py
